force-app/main/default/objects/NI_Invoice_Detail__c/NI_Invoice_Detail__c.object-meta.xml
<CustomObject>
    <description>Salesforce.com Change Request: NICC-015836

Used by Finance as part of CAPS Royalty and Amortization management</description>
    <label>NI Invoice Detail</label>
    <nameField>
        <displayFormat>INVD-{00000}</displayFormat>
        <label>NI Invoice Detail Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NI Invoice Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>