force-app/main/default/objects/NI_Invoice_Detail__c/fields/Amount_in_USD__c.field-meta.xml
<CustomField>
    <fullName>Amount_in_USD__c</fullName>
    <label>Amount in USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>