force-app/main/default/objects/NI_Invoice_Detail__c/fields/Applied_Amount__c.field-meta.xml
<CustomField>
    <fullName>Applied_Amount__c</fullName>
    <description>The % of Sum of Total Price applied to the Paid Amount on the related invoice</description>
    <formula>Percentage_of_Sum_of_Invoice_total_Price__c * NI_Invoice__r.Paid_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The % of Sum of Total Price applied to the Paid Amount on the related invoice</inlineHelpText>
    <label>Applied Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>