force-app/main/default/objects/NI_Invoice_Detail__c/fields/Applied_Amount_OLD__c.field-meta.xml
<CustomField>
    <fullName>Applied_Amount_OLD__c</fullName>
    <description>Paid Amount from the Invoice that is applied to this invoice detail record</description>
    <inlineHelpText>Paid Amount from the Invoice that is applied to this invoice detail record</inlineHelpText>
    <label>Applied Amount OLD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>