force-app/main/default/objects/NI_Invoice_Detail__c/fields/Billing_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Billing Start Date</label>
    <type>Date</type>
</CustomField>