force-app/main/default/objects/NI_Invoice_Detail__c/fields/Customer_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Customer_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Agreement</label>
    <referenceTo>NI_Customer_Agreement__c</referenceTo>
    <relationshipLabel>NI Invoice Detail</relationshipLabel>
    <relationshipName>NI_Invoice_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>