force-app/main/default/objects/NI_Invoice_Detail__c/fields/Deployment_Instance__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Instance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deployment Instance</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>NI Invoice Detail</relationshipLabel>
    <relationshipName>NI_Invoice_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>