force-app/main/default/objects/NI_Invoice_Detail__c/fields/NI_Invoice__c.field-meta.xml
<CustomField>
    <fullName>NI_Invoice__c</fullName>
    <label>NI Invoice</label>
    <referenceTo>NI_Invoice__c</referenceTo>
    <relationshipLabel>NI Invoice Detail</relationshipLabel>
    <relationshipName>NI_Invoice_Detail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>