force-app/main/default/objects/NI_Invoice_Detail__c/fields/Order_Sequence_Line__c.field-meta.xml
<CustomField>
    <fullName>Order_Sequence_Line__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Order Sequence Line</label>
    <length>40</length>
    <type>Text</type>
</CustomField>