force-app/main/default/objects/NI_Invoice_Detail__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>NI Invoice Detail</relationshipLabel>
    <relationshipName>NI_Invoice_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>