force-app/main/default/objects/NI_Invoice_Detail__c/fields/SoftraxInvoiceLine__c.field-meta.xml
<CustomField>
    <fullName>SoftraxInvoiceLine__c</fullName>
    <description>Salesforce.com Change Request: NICC-016764. This is a concatenated value - Softrax Invoice number - invoice sequence number. It&apos;s used to link the record to a Softrax invoice line. This field is the foreign key for a nightly job that synchs invoice lines</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>This is a concatenated value - Softrax Invoice number - invoice sequence number. It&apos;s used to link the record to a Softrax invoice line. This field is the foreign key for a nightly job that synchs invoice lines</inlineHelpText>
    <label>SoftraxInvoiceLine</label>
    <length>20</length>
    <type>Text</type>
</CustomField>