force-app/main/default/objects/NI_Invoice_Detail__c/fields/Sum_Invoice_Detail_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Sum_Invoice_Detail_Total_Price__c</fullName>
    <formula>NI_Invoice__r.Sum_Invoice_Detail_Total_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field that displays the &quot;Sum Invoice Total Price&quot; field of the related Invoice</inlineHelpText>
    <label>Sum Invoice Detail Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>