force-app/main/default/objects/NI_Invoice_Detail__c/fields/Tax_Type__c.field-meta.xml
<CustomField>
    <fullName>Tax_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tax Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>