force-app/main/default/objects/NI_Invoice_Detail__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <description>The Total Price of the Opportunity Line Item related to this invoice detail record</description>
    <inlineHelpText>The Total Price of the Opportunity Line Item related to this invoice detail record</inlineHelpText>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>